# pyherdr

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  NOTICE  README.md  pyherdr.cmd  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/: README.md  svg-source.md
docs/: multi-client-policy.md  release-checklist.md  remote-ssh.md  roadmap.md  site-decision.md  web-dashboard.md
pyherdr/: __init__.py  api.py  cli.py  clipboard.py  cron.py  demo_gif.py  demo_screenshot.py  detector.py  diagnostics.py  gui.py  launchers.py  layout.py  live_updates.py  models.py  notification.py  platform_support.py  plugins.py  recording.py  remote.py  replay.py  server.py  session.py  startup_profiles.py  store.py  url_actions.py  workflow.py  worksites.py  workspace_recents.py  workspace_search.py  worktree.py
pyherdr/config/: __init__.py  io.py  settings.py  sound.py  theme.py
pyherdr/contracts/: __init__.py  api.py
pyherdr/detect/: __init__.py  _common.py  _models.py  agents.py  catalog.py
pyherdr/domain/: __init__.py  models.py  status.py
pyherdr/presentation/: __init__.py  client.py  tui.py  watchdog.py
pyherdr/runtime/: __init__.py  command_runner.py  keys.py  procstats.py  pty_backend.py  screen.py  session.py
tests/: test_agent_ux_scenario.py  test_api.py  test_api_lifecycle.py  test_cli.py  test_clipboard.py  test_config.py  test_contracts.py  test_daily_driver_scenario.py  test_detect.py  test_detect_catalog.py  test_detector.py  test_diagnostics.py  test_domain_models.py  test_headless_scenario.py  test_launchers.py  test_layout.py  test_live_updates.py  test_models.py  test_pane_read.py  test_platform_support.py  test_plugins.py  test_procstats.py  test_release_smoke.py  test_remote.py  test_remote_scenario.py  test_replay.py  test_roadmap_docs.py  test_runtime_keys.py  test_runtime_pty.py  test_runtime_screen.py  test_server_mutation.py  test_server_process.py  test_server_process_runtime.py  test_startup_profiles.py  test_store.py  test_theme.py  test_tui.py  test_url_actions.py  test_watchdog.py  test_workflow.py  (+3 more)
tests/fixtures/detect/: amp_blocked_command.txt  antigravity_blocked_permission.txt  claude_idle_prompt_box.txt  claude_working_shell.txt  cline_blocked_tool_use.txt  codex_blocked_confirmation.txt  codex_working_status.txt  copilot_blocked_selection.txt  cursor_blocked_approval.txt  droid_blocked_execute.txt  gemini_blocked_confirmation.txt  grok_blocked_permission.txt  hermes_blocked_dangerous_command.txt  kilo_working_interrupt.txt  kimi_blocked_approval.txt  kiro_blocked_tool_approval.txt  manifest.json  opencode_blocked_permission.txt  qodercli_blocked_permission.txt
tests/fixtures/terminal/: scrollback_viewport.json  styled_cursor.json
tools/: agent_ux_scenario.py  daily_driver_scenario.py  docs_site.py  headless_scenario.py  release_smoke.py  remote_scenario.py  zmux_scenario.py
