[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyherdr"
version = "0.0.4"
description = "Terminal-native multiplexer for AI-agent workflows, SSH panes, and scripted terminal automation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "joselrnz" }]
keywords = ["terminal", "multiplexer", "tui", "ai-agents", "automation", "ssh", "herdr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.11,<3",
    "pyte>=0.8",
    "textual>=1.0",
    "psutil>=5.9",
    "pywinpty>=2.0; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/joselrnz/pyherdr"
Repository = "https://github.com/joselrnz/pyherdr"
Issues = "https://github.com/joselrnz/pyherdr/issues"
Documentation = "https://github.com/joselrnz/pyherdr#readme"
Changelog = "https://github.com/joselrnz/pyherdr/blob/main/CHANGELOG.md"

[project.scripts]
pyherdr = "pyherdr.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pyherdr"]

[project.optional-dependencies]
dev = ["ruff>=0.6", "mypy>=1.11"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
platform = "linux"
files = ["pyherdr"]
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["pyte.*", "winpty.*", "psutil.*"]
ignore_missing_imports = true
